@@ -1,6 +1,10 @@
 
 === ppracer 0.5 alpha2 ===
 
+2005-10-17  Volker Stroebel <volker@planetpenguin.de>
+	* src/ppogl/images/readPNG.cpp
+	fixed memleak
+
 2005-10-16  Volker Stroebel <volker@planetpenguin.de>
 	* src/racing.cpp
 	fixed braking in multiplayer mode
